# Moe_Assets_updater_NEXT

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  haruki-asset-configs.example.yaml
.github/workflows/: release.yml
crates/assetstudio-ffi/: Cargo.toml
crates/assetstudio-ffi/src/: lib.rs  worker_pool.rs
docs/: hip.md
examples/: hip_mock_server.rs  hip_upload_stress.rs
src/: core.rs  lib.rs  main.rs  service.rs
src/core/: asset_execution.rs  bundle_diff.rs  config.rs  download_records.rs  hip.rs  pipeline.rs  regions.rs
src/core/export_pipeline/: implementation.rs
src/core/export_pipeline/implementation/: assetstudio.rs  limits.rs  media_postprocess.rs  paths.rs  payload.rs  tasks.rs  tests.rs  types.rs
src/core/hip/: client.rs  codec.rs  errors.rs  frame.rs
src/core/media/: tests.rs
src/service/: http.rs  memory_telemetry.rs  poller.rs  watermark.rs
tests/: hip_mock.rs  logging.rs
