[package]
name = "haruki-sekai-asset-updater"
version = "6.0.5"
edition = "2021"
description = "Rust service for Haruki Sekai Asset Updater"
license = "MIT"

[workspace]
members = [".", "crates/assetstudio-ffi"]
resolver = "2"

[dependencies]
aes = "0.9"
axum = { version = "0.8", features = ["macros", "json"] }
cbc = { version = "0.2", features = ["alloc"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive"] }
cridecoder = "0.2.3"
haruki-assetstudio-ffi = { path = "crates/assetstudio-ffi" }
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
libc = "0.2"
mime_guess = "2.0"
opendal = { version = "0.57.0", default-features = false, features = [
    "executors-tokio",
    "reqwest-rustls-tls",
    "services-fs",
    "services-s3",
] }
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "json", "rustls"] }
rmp-serde = "1.3"
sha2 = "0.11.0"
zstd = { version = "0.13", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
rustls-pemfile = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
rsmpeg = { version = "0.18.0", default-features = false, features = ["ffmpeg7_1", "link_system_ffmpeg"], optional = true }
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5"
tempfile = "3.27"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
yaml_serde = "0.10"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }

[features]
default = []
media-ffi = ["dep:rsmpeg"]

[profile.release]
lto = "thin"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.7"

